--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,8 +2,9 @@
   <img src="/img/logo.svg" alt="" width={70} height={70} />
 
   <p class="mt-3 font-medium dark:text-zinc-300 lg:text-lg">
-    Welcome to your go-to destination for fresh perspectives. Dive deep into our rich content pool
-    curated meticulously to enlighten, entertain, and engage readers across the globe.
+    My name is Faisal. I am a self-taught Web Developer. From a young age, I have been passionate
+    about the latest gadgets. Through this blog, I want to help you make your tech purchasing
+    decisions more efficient.
   </p>
 
   <div class="mt-6 flex items-center gap-4">
