--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const navItems = [
 
 <footer class="bg-zinc-100 pt-10 text-center dark:bg-zinc-900">
   <section class="container">
-    <div class="flex flex-wrap items-center justify-center gap-4 sm:gap-8 lg:gap-10">
+    <div class="flex flex-wrap items-center justify-center gap-6 sm:gap-8 lg:gap-10">
       <a
         href="#"
         target="_blank"
@@ -22,7 +22,7 @@ const navItems = [
           width="1em"
           height="1em"
           viewBox="0 0 24 24"
-          class="text-xl md:text-lg"
+          class="text-2xl lg:text-lg"
         >
           <path
             fill="currentColor"
@@ -44,7 +44,7 @@ const navItems = [
           width="1em"
           height="1em"
           viewBox="0 0 24 24"
-          class="text-xl md:text-lg"
+          class="text-2xl lg:text-lg"
         >
           <path
             fill="currentColor"
@@ -66,7 +66,7 @@ const navItems = [
           width="1em"
           height="1em"
           viewBox="0 0 24 24"
-          class="text-xl md:text-lg"
+          class="text-2xl lg:text-lg"
         >
           <path
             fill="currentColor"
@@ -88,7 +88,7 @@ const navItems = [
           width="1em"
           height="1em"
           viewBox="0 0 24 24"
-          class="text-xl md:text-lg"
+          class="text-2xl lg:text-lg"
         >
           <path
             fill="currentColor"
@@ -104,7 +104,7 @@ const navItems = [
     </div>
 
     <nav class="mt-8">
-      <ul class="flex flex-wrap items-center justify-center gap-x-4 gap-y-3 md:gap-x-8 lg:gap-x-10">
+      <ul class="flex flex-wrap items-center justify-center gap-x-6 gap-y-3 md:gap-x-8 lg:gap-x-10">
         {
           navItems.map((item) => (
             <li>
