--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -6,7 +6,7 @@
       width="1em"
       height="1em"
       viewBox="0 0 24 24"
-      class="text-3xl transition hover:text-lightBlue md:text-2xl"
+      class="text-2xl transition hover:text-lightBlue"
     >
       <path
         fill="currentColor"
@@ -20,7 +20,7 @@
       width="1em"
       height="1em"
       viewBox="0 0 24 24"
-      class="text-3xl transition hover:text-lightBlue md:text-2xl"
+      class="text-2xl transition hover:text-lightBlue"
     >
       <path
         fill="currentColor"
@@ -34,7 +34,7 @@
       width="1em"
       height="1em"
       viewBox="0 0 24 24"
-      class="text-3xl transition hover:text-lightBlue md:text-2xl"
+      class="text-2xl transition hover:text-lightBlue"
     >
       <path
         fill="currentColor"
@@ -48,7 +48,7 @@
       width="1em"
       height="1em"
       viewBox="0 0 24 24"
-      class="text-3xl transition hover:text-lightBlue md:text-2xl"
+      class="text-2xl transition hover:text-lightBlue"
     >
       <path
         fill="currentColor"
