--- a/src/pages/articles/tag/[tag]/[...page].astro
+++ b/src/pages/articles/tag/[tag]/[...page].astro
@@ -36,7 +36,7 @@ const { page } = Astro.props
 <BaseLayout
   title={`All ${tag} Articles - Techie Faisal`}
   description=""
-  url={`${SITE_URL}/articles/category/${tag}/`}
+  url={`${SITE_URL}/articles/tag/${tag}/`}
 >
   <main class="container mb-16 mt-8 md:mb-24">
     <Breadcrumb.Root>
