Add privacy policy, contact and about page

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -8,7 +8,7 @@ import Social from './Social.astro'
   <p class="mt-3 font-medium dark:text-zinc-300 lg:text-lg">
     My name is Faisal. I am a self-taught Web Developer. From a young age, I have been passionate
     about the latest gadgets. Through this blog, I want to help you make your tech purchasing
-    decisions more efficient.
+    decisions better and more efficient.
   </p>
 
   <div class="mt-6">
