--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -8,11 +8,72 @@ import BaseLayout from '$lib/layouts/BaseLayout.astro'
   description=""
   url={`${SITE_URL}/privacy-policy/`}
 >
-  <main class="container mb-16 mt-12 h-96 max-w-5xl md:mb-24 lg:mt-16">
-    <h1 class="text-4xl font-extrabold">Privacy Policy</h1>
-    <p class="mt-6 dark:text-zinc-300">
-      If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact
-      at [email]
-    </p>
+  <main class="container mb-16 mt-12 max-w-5xl md:mb-24 lg:mt-16">
+    <div class="prose prose-zinc max-w-none dark:prose-invert">
+      <h1 class="text-4xl font-extrabold">Privacy Policy</h1>
+
+      <p>Last updated: September 04, 2024</p>
+      <p>
+        This Privacy Policy governs the manner in which Techie Faisal collects, uses, maintains and
+        discloses information collected from users (each, a “User”) of the <a
+          href="http://techiefaisal.com">https://techiefaisal.com</a
+        >
+        website (“Site”). This privacy policy applies to the Site and all products and services offered
+        by Techie Faisal
+      </p>
+
+      <p>
+        We collect no personal information and user is free to surf our webpage without any login or
+        registration.
+      </p>
+
+      <p>
+        However, we may collect general information like user browser, computer spec etc to improve
+        our service to you.
+      </p>
+
+      <p>
+        Techie Faisal uses cookies so that we can serve you better but if you want you can set your
+        browser to refuse cookies.
+      </p>
+
+      <p>
+        All personal data like username email and password is always protected and never is
+        displayed to an unauthorised user.
+      </p>
+
+      <p>
+        We use Google Analytics to analyze the use of our website. Google Analytics gathers
+        information about website use by means of cookies. The information gathered relating to our
+        website is used to create reports about the use of our website. Google’s privacy policy is
+        available at: <a href="https://policies.google.com/privacy" target="_blank"
+          >https://policies.google.com/privacy</a
+        >
+      </p>
+
+      <p>Remember we don’t and will never trade personal information about you.</p>
+
+      <p>
+        This site contains product affiliate links from Amazon. We may receive a commission if you
+        make a purchase after clicking on one of these links.
+      </p>
+
+      <p>
+        In the future, we may use third-party websites to generate revenue to keep us going but
+        ensure you this will not affect our service and your personal information in any way.
+      </p>
+
+      <p>Complaints about topics are taken seriously and we look into them immediately.</p>
+
+      <p>
+        If you have any questions about this Privacy Policy or the practices of this site, please
+        contact us at
+      </p>
+
+      <p>
+        Email: <a href="mailto:contact@techiefaisal.com" target="_blank"
+          >contact@techiefaisal.com</a>
+      </p>
+    </div>
   </main>
 </BaseLayout>
