--- a/src/components/ContactCard.astro
+++ b/src/components/ContactCard.astro
@@ -6,8 +6,8 @@ import Button from '$lib/components/Button.astro'
   <h2 class="text-2xl font-bold text-white">Join Us and Let's Explore Together</h2>
 
   <p class="mt-3 font-medium text-white dark:text-zinc-300 lg:text-lg">
-    Welcome to your go-to destination for fresh perspectives. Dive deep into our rich content pool
-    curated meticulously to enlighten, entertain, and engage readers across the globe.
+    If you have any suggestions, questions, or just something nice to say, send us an email. We'll
+    get back to you as soon as we can.
   </p>
 
   <div class="mt-10">
@@ -18,7 +18,7 @@ import Button from '$lib/components/Button.astro'
 <style>
   .contact {
     background:
-      linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
       url('../lib/assets/img/contact_homepage.webp') no-repeat center/cover;
   }
 </style>
