--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import Social from '$lib/components/Social.astro'
 import { SITE_URL } from '$lib/const'
 import BaseLayout from '$lib/layouts/BaseLayout.astro'
 ---
@@ -7,8 +8,21 @@ import BaseLayout from '$lib/layouts/BaseLayout.astro'
   <main class="container mb-16 mt-12 h-96 max-w-5xl md:mb-24 lg:mt-16">
     <h1 class="text-4xl font-extrabold">About</h1>
     <p class="mt-6 dark:text-zinc-300">
-      If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact
-      us at [email]
+      My name is Faisal. I am a self-taught Web Developer. From a young age, I have been passionate
+      about the latest gadgets. Through this blog, I want to help you make your tech purchasing
+      decisions better and more efficient.
     </p>
+
+    <p class="mt-6">
+      <span class="font-semibold">Email</span>:
+      <a href="mailto:contact@techiefaisal.com" target="_blank" class="hover:text-lightBlue"
+        >contact@techiefaisal.com</a
+      >
+    </p>
+
+    <div class="mt-8 flex items-center gap-2">
+      <span class="font-semibold">Follow Us:</span>
+      <Social />
+    </div>
   </main>
 </BaseLayout>
