--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,4 +1,5 @@
 ---
+import Social from '$lib/components/Social.astro'
 import { SITE_URL } from '$lib/const'
 import BaseLayout from '$lib/layouts/BaseLayout.astro'
 ---
@@ -7,8 +8,20 @@ import BaseLayout from '$lib/layouts/BaseLayout.astro'
   <main class="container mb-16 mt-12 h-96 max-w-5xl md:mb-24 lg:mt-16">
     <h1 class="text-4xl font-extrabold">Contact</h1>
     <p class="mt-6 dark:text-zinc-300">
-      If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact
-      at [email]
+      If you have any suggestions, questions, or just something nice to say, send us an email. We'll
+      get back to you as soon as we can.
     </p>
+
+    <p class="mt-6">
+      <span class="font-semibold">Email</span>:
+      <a href="mailto:contact@techiefaisal.com" target="_blank" class="hover:text-lightBlue"
+        >contact@techiefaisal.com</a
+      >
+    </p>
+
+    <div class="mt-8 flex items-center gap-2">
+      <span class="font-semibold">Follow Us:</span>
+      <Social />
+    </div>
   </main>
 </BaseLayout>
