--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import { SITE_URL } from '$lib/const'
 import BaseLayout from '$lib/layouts/BaseLayout.astro'
 ---
 
-<BaseLayout title="Contact" description="" url={`${SITE_URL}/contact/`}>
+<BaseLayout title="Contact - Techie Faisal" description="" url={`${SITE_URL}/contact/`}>
   <main class="container mb-16 mt-12 h-96 max-w-5xl md:mb-24 lg:mt-16">
     <h1 class="text-4xl font-extrabold">Contact</h1>
     <p class="mt-6 dark:text-zinc-300">
