--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -15,8 +15,8 @@ import BaseLayout from '$lib/layouts/BaseLayout.astro'
       <p>Last updated: September 04, 2024</p>
       <p>
         This Privacy Policy governs the manner in which Techie Faisal collects, uses, maintains and
-        discloses information collected from users (each, a “User”) of the <a
-          href="http://techiefaisal.com">https://techiefaisal.com</a
+        discloses information collected from users (each, a “User”) of the <a href="/"
+          >https://techiefaisal.com</a
         >
         website (“Site”). This privacy policy applies to the Site and all products and services offered
         by Techie Faisal
@@ -71,8 +71,8 @@ import BaseLayout from '$lib/layouts/BaseLayout.astro'
       </p>
 
       <p>
-        Email: <a href="mailto:contact@techiefaisal.com" target="_blank"
-          >contact@techiefaisal.com</a>
+        Email: <a href="mailto:contact@techiefaisal.com" target="_blank">contact@techiefaisal.com</a
+        >
       </p>
     </div>
   </main>
