Fix image size in desktop

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -94,8 +94,8 @@ const relatedArticles = article.data.relatedArticles
           alt=""
           class="rounded-lg"
           formats={['avif', 'webp']}
-          widths={[375, 425, 768, 1024, article.data.image.width]}
-          sizes={`(max-width: 375px) 375px, (max-width: 425px) 425px, (max-width: 768px) 768px, (max-width: 1440px) 1024px ${article.data.image.width}px`}
+          widths={[375, 425, 768, 1400]}
+          sizes={`(max-width: 375px) 375px, (max-width: 425px) 425px, (max-width: 768px) 768px, (max-width: 1440px) 1400px`}
         />
 
         <div class="my-8 md:my-12">
