--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,7 +3,7 @@ import Social from './Social.astro'
 ---
 
 <section class="rounded-lg bg-zinc-100 p-10 dark:bg-zinc-900">
-  <img src="/img/logo.svg" alt="" width={70} height={70} />
+  <img src="/img/logo.svg" alt="Techie Faisal Logo" width={70} height={70} />
 
   <p class="mt-3 font-medium dark:text-zinc-300 lg:text-lg">
     My name is Faisal. I am a self-taught Web Developer. From a young age, I have been passionate
