Remove demo article

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -50,7 +50,7 @@ const relatedArticles = article.data.relatedArticles
       </Breadcrumb.List>
     </Breadcrumb.Root>
 
-    <h1 class="mb-3 mt-6 text-4xl font-extrabold">{article.data.title}</h1>
+    <h1 class="mb-3 mt-6 max-w-4xl text-4xl font-extrabold leading-snug">{article.data.title}</h1>
 
     <div class="mt-4">
       <Tag tags={article.data.tags} />
