Change font to dm sans

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -78,6 +78,6 @@
   }
 
   body {
-    @apply bg-background font-inter text-foreground;
+    @apply font-dmSans bg-background text-foreground;
   }
 }
