--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -27,7 +27,7 @@ const { article } = Astro.props
           >{formatDate(article.data.pubDate)}</span
         >
       </div>
-      <h2 class="mt-3 text-xl font-semibold transition hover:text-lightBlue">
+      <h2 class="mt-3 text-2xl font-semibold transition hover:text-lightBlue">
         {article.data.title}
       </h2>
     </a>
