--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,7 @@ import '@fontsource/dm-sans/500.css'
 import '@fontsource/dm-sans/600.css'
 import '@fontsource/dm-sans/700.css'
 import '@fontsource/dm-sans/800.css'
+import '@fontsource/dm-sans/900.css'
 // /font
 
 import { ViewTransitions } from 'astro:transitions'
