--- a/src/pages/articles/tag/[tag]/[...page].astro
+++ b/src/pages/articles/tag/[tag]/[...page].astro
@@ -46,7 +46,7 @@ const { page } = Astro.props
         </Breadcrumb.Item>
         <Breadcrumb.Separator />
         <Breadcrumb.Item>
-          <Breadcrumb.Link href="/articles/">Articles</Breadcrumb.Link>
+          <Breadcrumb.Link href="/articles">Articles</Breadcrumb.Link>
         </Breadcrumb.Item>
         <Breadcrumb.Separator />
         <Breadcrumb.Item>
