Add description to pages

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -50,13 +50,13 @@ const { title, url, description } = Astro.props
     <meta name="rating" content="general" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content={url} />
-    <meta name="contact" content="email id" />
-    <meta name="reply-to" content="email id" />
+    <meta name="contact" content="contact@techiefaisal.com" />
+    <meta name="reply-to" content="contact@techiefaisal.com" />
 
     <meta name="description" content={description} />
     <meta name="og:title" content={title} />
     <meta name="og:description" content={description} />
-    <meta name="”robots”" content="noindex, nofollow" />
+    <meta name="”robots”" content="index, follow" />
 
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
