--- a/src/pages/articles/[...page].astro
+++ b/src/pages/articles/[...page].astro
@@ -22,7 +22,7 @@ export async function getStaticPaths({ paginate }: any) {
 const { page } = Astro.props
 ---
 
-<BaseLayout title="All Articles - Techie Faisal" description="" url={`${SITE_URL}/articles/`}>
+<BaseLayout title="All Articles - Techie Faisal" description="You can read all articles here." url={`${SITE_URL}/articles`}>
   <main class="container mb-16 mt-8 md:mb-24">
     <Breadcrumb.Root>
       <Breadcrumb.List>
