--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -31,7 +31,7 @@ const relatedArticles = article.data.relatedArticles
 <BaseLayout
   title={`${article.data.title} - Techie Faisal`}
   description={article.data.description}
-  url={`${SITE_URL}/articles/${article.slug}/`}
+  url={`${SITE_URL}/articles/${article.slug}`}
 >
   <main class="container mb-16 mt-8 md:mb-24">
     <Breadcrumb.Root>
