--- a/src/pages/articles/tag/[tag]/[...page].astro
+++ b/src/pages/articles/tag/[tag]/[...page].astro
@@ -35,8 +35,8 @@ const { page } = Astro.props
 
 <BaseLayout
   title={`All ${capitalize(tag)} Articles - Techie Faisal`}
-  description=""
-  url={`${SITE_URL}/articles/tag/${tag}/`}
+  description="You can read all articles here with their specific tags."
+  url={`${SITE_URL}/articles/tag/${tag}`}
 >
   <main class="container mb-16 mt-8 md:mb-24">
     <Breadcrumb.Root>
