--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,12 @@ import BaseLayout from '$lib/layouts/BaseLayout.astro'
 import * as Breadcrumb from '$lib/components/ui/breadcrumb/index.js'
 ---
 
-<BaseLayout title="Contact - Techie Faisal" description="" url={`${SITE_URL}/contact/`}>
+<BaseLayout
+  title="Contact - Techie Faisal"
+  description=`If you have any suggestions, questions, or just something nice to say, send us an email. We'll
+      get back to you as soon as we can.`
+  url={`${SITE_URL}/contact`}
+>
   <main class="container mb-16 mt-8 h-96 max-w-5xl md:mb-24">
     <Breadcrumb.Root>
       <Breadcrumb.List>
