--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -41,7 +41,7 @@ const relatedArticles = article.data.relatedArticles
         </Breadcrumb.Item>
         <Breadcrumb.Separator />
         <Breadcrumb.Item>
-          <Breadcrumb.Link href="/articles">Articles</Breadcrumb.Link>
+          <Breadcrumb.Link href="/articles/">Articles</Breadcrumb.Link>
         </Breadcrumb.Item>
         <Breadcrumb.Separator />
         <Breadcrumb.Item>
