--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -8,7 +8,7 @@ const { article } = Astro.props
 
 <div>
   <div class="group">
-    <a href={`/articles/${article.slug}`} aria-label={`Go to ${article.data.title}`}>
+    <a href={`/articles/${article.slug}/`} aria-label={`Go to ${article.data.title}`}>
       <div class="overflow-hidden rounded-lg">
         <Picture
           src={article.data.image}
@@ -27,7 +27,7 @@ const { article } = Astro.props
           >{formatDate(article.data.pubDate)}</span
         >
       </div>
-      <h2 class="mt-3 text-2xl font-semibold transition hover:text-lightBlue line-clamp-3">
+      <h2 class="mt-3 line-clamp-3 text-2xl font-semibold transition hover:text-lightBlue">
         {article.data.title}
       </h2>
     </a>
