--- a/src/pages/articles/[...page].astro
+++ b/src/pages/articles/[...page].astro
@@ -19,10 +19,14 @@ export async function getStaticPaths({ paginate }: any) {
   return paginate(allArticles, { pageSize: 15 })
 }
 
-const { page } = Astro.props
+const { page }: { page: { data: any[] } } = Astro.props
 ---
 
-<BaseLayout title="All Articles - Techie Faisal" description="You can read all articles here." url={`${SITE_URL}/articles`}>
+<BaseLayout
+  title="All Articles - Techie Faisal"
+  description="You can read all articles here."
+  url={`${SITE_URL}/articles`}
+>
   <main class="container mb-16 mt-8 md:mb-24">
     <Breadcrumb.Root>
       <Breadcrumb.List>
@@ -41,8 +45,12 @@ const { page } = Astro.props
       {(page as any).data.map((article: any) => <ArticleCard article={article} />)}
     </div>
 
-    <div class="mt-16 md:mt-20 lg:mt-24">
-      <Paginator page={page} />
-    </div>
+    {
+      page.data.length > 15 && (
+        <div class="mt-16 md:mt-20 lg:mt-24">
+          <Paginator page={page} />
+        </div>
+      )
+    }
   </main>
 </BaseLayout>
