--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -27,11 +27,9 @@ const { page }: any = Astro.props
 ---
 
 <BaseLayout
-  url={`${SITE_URL}`}
+  url={`${SITE_URL}/`}
   title="Techie Faisal - Decoding Technology"
-  description=`My name is Faisal. I am a self-taught Web Developer. From a young age, I have been passionate
-      about the latest gadgets. Through this blog, I want to help you make your tech purchasing
-      decisions better and more efficient.`
+  description=`My name is Faisal. I am a self-taught Web Developer. From a young age, I have been passionate about the latest gadgets. Through this blog, I want to help you make your tech purchasing decisions better and more efficient.`
 >
   <main class="container mb-16 mt-12 md:mb-24 lg:mt-16">
     <div class="grid grid-cols-1 gap-12 lg:grid-cols-3">
