--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,10 +7,8 @@ import * as Breadcrumb from '$lib/components/ui/breadcrumb/index.js'
 
 <BaseLayout
   title="About - Techie Faisal"
-  description=`My name is Faisal. I am a self-taught Web Developer. From a young age, I have been passionate
-      about the latest gadgets. Through this blog, I want to help you make your tech purchasing
-      decisions better and more efficient.`
-  url={`${SITE_URL}/about`}
+  description=`My name is Faisal. I am a self-taught Web Developer. From a young age, I have been passionate about the latest gadgets. Through this blog, I want to help you make your tech purchasing decisions better and more efficient.`
+  url={`${SITE_URL}/about/`}
 >
   <main class="container mb-16 mt-8 h-96 max-w-5xl md:mb-24">
     <Breadcrumb.Root>
