--- a/src/pages/articles/[...page].astro
+++ b/src/pages/articles/[...page].astro
@@ -24,8 +24,8 @@ const { page }: { page: { data: any[] } } = Astro.props
 
 <BaseLayout
   title="All Articles - Techie Faisal"
-  description="You can read all articles here."
-  url={`${SITE_URL}/articles`}
+  description=`You can read all articles here.`
+  url={`${SITE_URL}/articles/`}
 >
   <main class="container mb-16 mt-8 md:mb-24">
     <Breadcrumb.Root>
