--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -6,8 +6,8 @@ import * as Breadcrumb from '$lib/components/ui/breadcrumb/index.js'
 
 <BaseLayout
   title="Privacy Policy - Techie Faisal"
-  description="This is the privacy Policy of Techie Faisal"
-  url={`${SITE_URL}/privacy-policy`}
+  description=`This is the privacy Policy of Techie Faisal`
+  url={`${SITE_URL}/privacy-policy/`}
 >
   <main class="container mb-16 mt-8 max-w-5xl md:mb-24">
     <Breadcrumb.Root>
