--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -14,7 +14,7 @@ import { SITE_URL } from '$lib/const'
 
 export async function getStaticPaths() {
   const allArticles = await getCollection('articles')
-  return allArticles.map((article) => ({
+  return allArticles.map((article: any) => ({
     params: { slug: article.slug },
     props: { article }
   }))
@@ -31,7 +31,9 @@ const relatedArticles = article.data.relatedArticles
 <BaseLayout
   title={`${article.data.title} - Techie Faisal`}
   description={article.data.description}
-  url={`${SITE_URL}/articles/${article.slug}`}
+  url={`${SITE_URL}/articles/${article.slug}/`}
+  ogType="article"
+  ogImage={`${article.data.ogImage}`}
 >
   <main class="container mb-16 mt-8 md:mb-24">
     <Breadcrumb.Root>
@@ -50,7 +52,7 @@ const relatedArticles = article.data.relatedArticles
       </Breadcrumb.List>
     </Breadcrumb.Root>
 
-    <h1 class="mb-3 mt-6 max-w-4xl text-4xl font-black leading-tight">{article.data.title}</h1>
+    <h1 class="mb-3 mt-6 max-w-4xl text-4xl font-extrabold leading-tight">{article.data.title}</h1>
 
     <div class="mt-4">
       <Tag tags={article.data.tags} />
